--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Biseo SSO Test</h1>
-        <form action="/login" method="POST">
+        <form action="/api/login" method="POST">
             <button>Login</button>
         </form>
     </body>
